# ragbot

./: .gitignore  404.html  DEVELOPMENT.md  LICENSE.txt  QUICKSTART.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
cli/: index.html
configs/: default.json  extreme.json
data/example/: kb0.txt  kb1.txt  kb2.txt  kb3.txt  kb4.txt  kb5.txt  kb6.txt  kb7.txt  kb8.txt  system.prompt
docs/: cli.md  index.md
docs/reference/: chat.md  cli.md  evaluate.md  rag.md
docs/reference/evaluation/: dataset_schema.md  eval_chain.md
docs/reference/evaluation/metrics/: answer_relevance.md  base.md  bleu.md  context_relevance.md  faithfulness.md  rouge.md  semantic_similarity.md
docs/reference/utils/: utils.md
ragbot/: chat.py  cli.py  evaluate.py  rag.py
ragbot/evaluation/: dataset_schema.py  eval_chain.py
ragbot/evaluation/metrics/: answer_relevance.py  base.py  bleu.py  context_relevance.py  faithfulness.py  rouge.py  semantic_similarity.py
ragbot/utils/: utils.py
reference/chat/: index.html
reference/cli/: index.html
reference/evaluate/: index.html
reference/evaluation/dataset_schema/: index.html
reference/evaluation/eval_chain/: index.html
reference/evaluation/metrics/answer_relevance/: index.html
reference/evaluation/metrics/base/: index.html
reference/evaluation/metrics/bleu/: index.html
reference/evaluation/metrics/context_relevance/: index.html
reference/evaluation/metrics/rouge/: index.html
reference/rag/: index.html
reference/utils/utils/: index.html
scripts/: build_dataset.py  gemini.py
search/: search_index.json
(+2 files in other folders)
